work on swagger documenation
