# storage/api-docs/api-docs.json
@@ -99,12 +99,7 @@
                             }
                         }
                     }
-                },
-                "security": [
-                    {
-                        "bearerAuth": []
-                    }
-                ]
+                }
             }
         },
         "/api/v1/articles/search": {
